# deepagent-dash

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
cowork_dash/: __init__.py  __main__.py  agent.py  app.py  backends.py  canvas.py  cli.py  components.py  config.py  file_utils.py  layout.py  tools.py  virtual_fs.py
cowork_dash/assets/: app.js  styles.css
cowork_dash/templates/: index.html
deepagent_dash/: __init__.py  agent.py  app.py  canvas.py  cli.py  config.py  file_utils.py  layout.py  tools.py
deepagents_dash/: __init__.py  __main__.py  app.py  canvas_utils.py  cli.py  components.py  config_template.py  file_utils.py
deepagents_dash/assets/: app.js  styles.css
deepagents_dash/templates/: index.html
docs/: CLI_USAGE.md
examples/: example_agent.py  python_api_example.py
tests/: __init__.py  conftest.py  test_core.py
